# 12Words

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs
src/components/: Sidebar.vue
src/composables/: useT.ts
src/i18n/: index.ts
src/stores/: locale.ts  vault.ts
src/views/: GeneratorView.vue  OnboardingView.vue  PasswordsView.vue  SettingsView.vue
